scss/_button.scss
button {
  width: 100%;
  height: 2rem;
  cursor: pointer;
  font-family: $main-font-family;
  transition: all 0.3s ease;
  border: none;

  &:hover {
    transform: scale(1.1);
    background-color: $hover-button-background-color;
    font-size: $font-size-small;
    color: $hover-button-text-color;
  }
}

